--- a/TestingEz/src/main/resources/templates/sign-in.html
+++ b/TestingEz/src/main/resources/templates/sign-in.html
@@ -11,7 +11,7 @@
               novalidate
               th:action="@{/account/login}"
               th:object="${userSignInData}">
-            <div th:if="${error}" class="text-danger fs-6 text-center" th:text="#{invalidCredentials}">
+            <div th:if="${error}" class="bg-danger text-white fs-6 text-center rounded" th:text="#{invalidCredentials}">
             </div>
             <label for="username" class="form-label" th:text="#{loginUsername}"></label>
             <div class="input-group">
@@ -55,10 +55,6 @@
         </form>
     </div>
 </div>
-<script
-        type="module"
-        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
-></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
