--- a/TestingEz/src/main/resources/templates/test-details.html
+++ b/TestingEz/src/main/resources/templates/test-details.html
@@ -32,7 +32,7 @@
                     <div class="d-flex justify-content-between">
                         <span th:text="'№: ' + ${questionData.number}"></span>
                         <a
-                                class="btn btn-dark border border-2 rounded"
+                                class="btn btn-light border border-2 rounded"
                                 th:href="@{/questions/edit/{id}(id=${questionData.id})}">
                             <img src="/images/edit.png" style="width: 25px; height: auto" alt="edit">
                         </a>
@@ -51,10 +51,6 @@
 
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
-<script
-        type="module"
-        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
-></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
