logic implemented behind button 'Delete Account'

--- a/TestingEz/src/main/resources/templates/sign-in.html
+++ b/TestingEz/src/main/resources/templates/sign-in.html
@@ -5,8 +5,7 @@
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="bg-light p-5 border border-2 rounded fs-5 shadow">
         <h2 class="text-center" th:text="#{login}"></h2>
-        <form action="#"
-              class="d-flex flex-column"
+        <form class="d-flex flex-column"
               method="post"
               novalidate
               th:action="@{/account/login}"
