--- a/TestingEz/src/main/resources/templates/user-profile.html
+++ b/TestingEz/src/main/resources/templates/user-profile.html
@@ -79,20 +79,17 @@
         </div>
         <div class="row justify-content-center text-center">
             <div class="col-sm-8 col-md-4">
-                <button type="button"
+                <a th:href="@{/user/profile/delete/confirmation}"
+                        type="button"
                         class="btn btn-danger rounded text-center border border-2 border-black fs-5 px-3"
                         th:text="#{deleteAccount}">
-                </button>
+                </a>
             </div>
         </div>
     </main>
 
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
-<script
-        type="module"
-        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
-></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
