--- a/TestingEz/src/main/resources/templates/user-profile.html
+++ b/TestingEz/src/main/resources/templates/user-profile.html
@@ -17,10 +17,11 @@
                         height="300px"
                         class="shadow rounded-circle border border-2"
                 />
-                <button type="button"
-                        class="btn btn-dark rounded text-center border border-2 border-black w-50 fs-5"
-                        th:text="#{change}">
-                </button>
+                <a th:href="@{/user/profile/avatar/change}"
+                   type="button"
+                   class="btn btn-dark rounded text-center border border-2 border-black w-50 fs-5"
+                   th:text="#{change}">
+                </a>
             </div>
             <div class="col-sm-12 col-md-7 d-flex flex-column align-items-center" th:object="${userProfileData}">
                 <input
@@ -80,9 +81,9 @@
         <div class="row justify-content-center text-center">
             <div class="col-sm-8 col-md-4">
                 <a th:href="@{/user/profile/delete/confirmation}"
-                        type="button"
-                        class="btn btn-danger rounded text-center border border-2 border-black fs-5 px-3"
-                        th:text="#{deleteAccount}">
+                   type="button"
+                   class="btn btn-danger rounded text-center border border-2 border-black fs-5 px-3"
+                   th:text="#{deleteAccount}">
                 </a>
             </div>
         </div>
