users have default avatar url, uploaded in cloudinary

--- a/TestingEz/src/main/resources/templates/user-profile-edit.html
+++ b/TestingEz/src/main/resources/templates/user-profile-edit.html
@@ -11,7 +11,7 @@
         <div class="row bg-light shadow rounded border border-2 p-3">
             <div class="col-sm-12 col-md-5 mb-3 mb-sm-3 mb-md-0 d-flex flex-column align-items-center gap-2">
                 <img
-                        src="/images/astronaut.png"
+                        th:src="${avatarUrl}"
                         alt="profile-picture"
                         width="300px"
                         height="300px"
