--- a/TestingEz/src/main/resources/templates/fragments/headers.html
+++ b/TestingEz/src/main/resources/templates/fragments/headers.html
@@ -13,7 +13,7 @@
                th:href="@{/user/profile}"
             >
                 <img
-                        src="/images/astronaut.png"
+                        th:src="${avatarUrl}"
                         alt="default-avatar"
                         width="35"
                         height="35"
