a user can now change their avatars

--- a/TestingEz/src/main/resources/templates/fragments/headers.html
+++ b/TestingEz/src/main/resources/templates/fragments/headers.html
@@ -17,7 +17,7 @@
                         alt="default-avatar"
                         width="35"
                         height="35"
-                        class="d-inline-block align-text-middle me-1"
+                        class="d-inline-block align-text-middle me-1 rounded-circle"
                 />
                 <span sec:authentication="name" class="text-dark"></span></a
             >
