--- a/TestingEz/src/main/resources/templates/avatar-change.html
+++ b/TestingEz/src/main/resources/templates/avatar-change.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avatar Upload with Cropper</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>TestingEz</title>
+    <link
+            rel="icon"
+            type="image/x-icon"
+            href="/images/school.png"
+    />
+    <link rel="stylesheet" href="/css/reset.css"/>
+    <link rel="stylesheet" href="/css/typography.css"/>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
-<div class="container mt-5">
-    <h3>Upload Your Avatar</h3>
-    <input type="file" id="avatarInput" accept="image/*" class="form-control">
-    <div class="mt-3" style="max-width: 100%; overflow: hidden;">
-        <img id="image" style="max-width: 100%;">
+<body class="font">
+<div class="d-flex flex-column align-items-center justify-content-center vh-100">
+    <div class="d-flex flex-column shadow p-5 border border-2 rounded">
+        <h3>Choose Avatar</h3>
+        <input type="file" id="avatarInput" accept="image/*"
+               class="form-control p-1 border border-2 border-black bg-dark text-white ">
+        <div class="mt-3 flex-grow-1" style="max-width: 100%; overflow: hidden;">
+            <img id="image" style="max-width: 100%;">
+        </div>
+        <button id="cropButton" class="btn btn-dark border border-2 border-black rounded fs-5 mt-2" disabled>
+            Update
+        </button>
     </div>
-    <button id="cropButton" class="btn btn-primary mt-3" disabled>Crop & Upload Avatar</button>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
