--- a/TestingEz/src/main/resources/templates/success.html
+++ b/TestingEz/src/main/resources/templates/success.html
@@ -7,7 +7,7 @@
         <h1 th:text="#{successMessage}"></h1>
         <p class="fs-3"><span th:text="${message}"></span></p>
         <a class="link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fs-3"
-           href="/user/home"
+           th:href="@{/user/home}"
            th:text="#{homePage}"></a>
     </div>
 </div>
