small position adjusment

--- a/TestingEz/src/main/resources/templates/test-details.html
+++ b/TestingEz/src/main/resources/templates/test-details.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-8 col-lg-6">
+            <div class="col-sm-12 col-md-8 col-lg-6 text-center mt-3">
                 <form method="post"
                       th:action="@{/test/delete/{testId}(testId=*{id})}"
                       th:object="${testDetails}">
