New functioning button "Delete Test" added (#58)
* database touched so a user and a test can be deleted anytime along with all related enitites

* users and test can be deleted anytime effortlessly

* small position adjusment

--- a/TestingEz/src/main/resources/templates/test-details.html
+++ b/TestingEz/src/main/resources/templates/test-details.html
@@ -47,6 +47,18 @@
                 </div>
             </div>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-sm-12 col-md-8 col-lg-6 text-center mt-3">
+                <form method="post"
+                      th:action="@{/test/delete/{testId}(testId=*{id})}"
+                      th:object="${testDetails}">
+                    <button type="submit"
+                            class="btn btn-danger rounded text-center border border-2 border-black fs-5 px-3"
+                            th:text="#{deleteTest}">
+                    </button>
+                </form>
+            </div>
+        </div>
     </main>
 
     <div th:replace="~{fragments/footers :: footer}"></div>
