features page in progress

--- a/TestingEz/src/main/resources/templates/fragments/footers.html
+++ b/TestingEz/src/main/resources/templates/fragments/footers.html
@@ -11,7 +11,7 @@
                     <a th:href="@{/}" class="nav-link px-2 text-dark fs-5" th:text="#{footerHome}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{features}">Features</a>
+                    <a th:href="@{/features}" class="nav-link px-2 text-dark fs-5" th:text="#{features}">Features</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{pricing}">Pricing</a>
