--- a/TestingEz/src/main/resources/templates/faqs.html
+++ b/TestingEz/src/main/resources/templates/faqs.html
@@ -8,12 +8,12 @@
         <div class="accordion shadow rounded border border-2" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                         What is "TestingEz"?
                     </button>
                 </h2>
-                <div id="collapseOne" class="accordion-collapse collapse bg-dark text-white"
+                <div id="collapseOne" class="accordion-collapse collapse bg-black text-white"
                      data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <code>"TestingEz"</code> is a place where everyone is free to create and join tests on different
@@ -27,12 +27,12 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         How did "TestingEz" come to existence?
                     </button>
                 </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse bg-dark text-white"
+                <div id="collapseTwo" class="accordion-collapse collapse bg-black text-white"
                      data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         In the beginning, <code>"TestingEz"</code> was actually a <code>desktop application</code>&#128187;
@@ -47,13 +47,13 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false"
                             aria-controls="collapseThree">
                         Who stands behind "TestingEz"?
                     </button>
                 </h2>
-                <div id="collapseThree" class="accordion-collapse collapse bg-dark text-white"
+                <div id="collapseThree" class="accordion-collapse collapse bg-black text-white"
                      data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         The <code>"We..."</code> messages you might have encountered while discovering the potential
@@ -66,13 +66,13 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseFour" aria-expanded="false"
                             aria-controls="collapseThree">
                         Should I pay before I use "TestingEz"?
                     </button>
                 </h2>
-                <div id="collapseFour" class="accordion-collapse collapse bg-dark text-white"
+                <div id="collapseFour" class="accordion-collapse collapse bg-black text-white"
                      data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         Absolutely, <code>not</code>. The initial budget of "TestingEz" was exactly 0&#128178; (or
@@ -84,13 +84,13 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseFive" aria-expanded="false"
                             aria-controls="collapseThree">
                         Is "TestingEz" safe?
                     </button>
                 </h2>
-                <div id="collapseFive" class="accordion-collapse collapse bg-dark text-white"
+                <div id="collapseFive" class="accordion-collapse collapse bg-black text-white"
                      data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <p>While <code>"TestingEz"</code> is generally <code>safe</code>, we can't guarantee that you
