features page is no available

--- a/TestingEz/src/main/resources/templates/all-tests.html
+++ b/TestingEz/src/main/resources/templates/all-tests.html
@@ -8,7 +8,7 @@
 
     <main class="container d-flex flex-column justify-content-center flex-grow-1">
         <h3 th:text="#{myTests}"></h3>
-        <div class="container shadow rounded border border-2 p-5">
+        <div class="container bg-light shadow rounded border border-2 p-5">
             <span class="fs-4"
                   th:text="#{thereArentAnyTestSoFar}"
                   th:if="${paginatedTests.isEmpty()}">
