--- a/TestingEz/src/main/resources/templates/avatar-change.html
+++ b/TestingEz/src/main/resources/templates/avatar-change.html
@@ -21,7 +21,7 @@
 </head>
 <body class="font">
 <div class="d-flex flex-column align-items-center justify-content-center vh-100">
-    <div class="d-flex flex-column shadow p-5 border border-2 rounded">
+    <div class="d-flex flex-column bg-light shadow p-5 border border-2 rounded">
         <h3>Choose Avatar</h3>
         <input type="file" id="avatarInput" accept="image/*"
                class="form-control p-1 border border-2 border-black bg-dark text-white ">
