--- a/TestingEz/src/main/resources/templates/features.html
+++ b/TestingEz/src/main/resources/templates/features.html
@@ -19,61 +19,72 @@
     />
 </head>
 <body class="font">
-<div class="d-flex flex-column vh-100">
-    <h1 class="text-center">Discover wonderful "TestingEz" features</h1>
-    <div class="container d-flex flex-column justify-content-center my-3 gap-5 overflow-auto" style="height: 550px">
+<div class="d-flex flex-column">
+    <span class="text-center fs-3">Discover wonderful "TestingEz" features</span>
+    <div class="container d-flex flex-column justify-content-center my-3 gap-5 pb-2 overflow-auto"
+         style="height: 1110px; padding-top: 1260px;">
         <div class="row justify-content-center align-items-center shadow rounded border border-2">
             <div class="col-sm-12 col-md-6">
-                <img src="/images/russia-flag.png" alt="russia" class="rounded img-fluid">
+                <img src="/images/user-home.png" alt="user-home" class="rounded img-fluid">
             </div>
             <div class="col-sm-12 col-md-4">
-                <h1>Feature 1</h1>
-                <p>random words describing shit</p>
+                <h1>Home sweet home</h1>
+                <p>When there is nothing to do, feel free to discover the home page, feeding you with new
+                    interesting content every circle hour.</p>
             </div>
         </div>
         <div class="row justify-content-center align-items-center shadow rounded border border-2">
             <div class="col-sm-12 col-md-4">
-                <h1>Feature 1</h1>
-                <p>random words describing shit</p>
+                <h1>Here we go again...</h1>
+                <p>This might not be your favourite place...&#128513;</p>
             </div>
             <div class="col-sm-12 col-md-6">
-                <img src="/images/russia-flag.png" alt="russia" class="rounded img-fluid">
+                <img src="/images/test-join.png" alt="test-join" class="rounded img-fluid">
             </div>
         </div>
         <div class="row justify-content-center align-items-center shadow rounded border border-2">
             <div class="col-sm-12 col-md-6">
-                <img src="/images/russia-flag.png" alt="russia" class="rounded img-fluid">
+                <img src="/images/test-create.png" alt="test-create" class="rounded img-fluid">
             </div>
             <div class="col-sm-12 col-md-4">
-                <h1>Feature 1</h1>
-                <p>random words describing shit</p>
+                <h1>Behind the scene</h1>
+                <p>This is where the magic happens.</p>
             </div>
         </div>
         <div class="row justify-content-center align-items-center shadow rounded border border-2">
             <div class="col-sm-12 col-md-4">
-                <h1>Feature 1</h1>
-                <p>random words describing shit</p>
+                <h1>You missed something?</h1>
+                <p>Don't forget to include that one question...</p>
             </div>
             <div class="col-sm-12 col-md-6">
-                <img src="/images/russia-flag.png" alt="russia" class="rounded img-fluid">
+                <img src="/images/test-details.png" alt="test-details" class="rounded img-fluid">
             </div>
         </div>
         <div class="row justify-content-center align-items-center shadow rounded border border-2">
             <div class="col-sm-12 col-md-6">
-                <img src="/images/russia-flag.png" alt="russia" class="rounded img-fluid">
+                <img src="/images/question-answer.png" alt="question-answer" class="rounded img-fluid">
             </div>
             <div class="col-sm-12 col-md-4">
-                <h1>Feature 1</h1>
-                <p>random words describing shit</p>
+                <h1>You don't have time, bro</h1>
+                <p>You know the drill: drop the pencil, throw a glance, answer the question. Repeat.</p>
             </div>
         </div>
         <div class="row justify-content-center align-items-center shadow rounded border border-2">
             <div class="col-sm-12 col-md-4">
-                <h1>Feature 1</h1>
-                <p>random words describing shit</p>
+                <h1>Great job!</h1>
+                <p>You did it, mate! You can peacefully ask for your PS5 now!</p>
             </div>
             <div class="col-sm-12 col-md-6">
-                <img src="/images/russia-flag.png" alt="russia" class="rounded img-fluid">
+                <img src="/images/result-summary.png" alt="result-summary" class="rounded img-fluid">
+            </div>
+        </div>
+        <div class="row justify-content-center align-items-center shadow rounded border border-2">
+            <div class="col-sm-12 col-md-4">
+                <h1>Hmmm...wait a minute.</h1>
+                <p>How could I even answer wrong here???</p>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <img src="/images/result-details.png" alt="result-details" class="rounded img-fluid">
             </div>
         </div>
     </div>
