--- a/TestingEz/src/main/resources/templates/test-details.html
+++ b/TestingEz/src/main/resources/templates/test-details.html
@@ -17,7 +17,7 @@
         </div>
         <br>
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-8 col-lg-6 shadow rounded border border-2"
+            <div class="col-sm-12 col-md-8 col-lg-6 bg-light shadow rounded border border-2"
                  th:object="${testDetails}">
                 <h2 th:text="*{name}"></h2>
                 <p th:text="#{description} + ' ' + *{description}"></p>
@@ -37,7 +37,7 @@
         </div>
         <br>
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-8 col-lg-6 shadow rounded border border-2 p-3">
+            <div class="col-sm-12 col-md-8 col-lg-6 bg-light shadow rounded border border-2 p-3">
                 <div class="p-2 rounded border border-2 mb-2"
                      th:each="questionData : ${testQuestions}">
                     <div class="d-flex justify-content-between">
