--- a/TestingEz/src/main/resources/templates/result-details.html
+++ b/TestingEz/src/main/resources/templates/result-details.html
@@ -6,7 +6,7 @@
     <div th:replace="~{fragments/headers :: header}"></div>
     <main class="container flex-grow-1">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-8 col-lg-6 shadow text-center rounded border border-2"
+            <div class="col-sm-12 col-md-8 col-lg-6 bg-light shadow text-center rounded border border-2"
                  th:object="${resultDetails}"
                  th:classappend="${resultDetails.status == 'PASS'} ? 'border-success' : 'border-danger'">
                 <h2 th:text="*{testName}"></h2>
@@ -18,7 +18,7 @@
         </div>
         <br>
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-8 col-lg-6 shadow rounded border border-2 p-3">
+            <div class="col-sm-12 col-md-8 col-lg-6 bg-light shadow rounded border border-2 p-3">
                 <div class="p-2 rounded border border-2 mb-2"
                      th:each="questionData : ${answeredQuestions}">
                     <p th:text="${questionData.number} + '.' + ${questionData.question} + ' (' + ${questionData.points} + 'p.)'"></p>
