Giving functionallity to Home, Features and FAQs footer pages  (#61)
* you can no longer delete question from test when there is only one left and also the questions numbers are changed after a question is deleted

* FAQs page craeated

* endpoint hitting FAQs created, made accessible for everyone

* features page in progress

* features page is no available

--- a/TestingEz/src/main/resources/templates/fragments/footers.html
+++ b/TestingEz/src/main/resources/templates/fragments/footers.html
@@ -8,16 +8,16 @@
         <footer class="container bg-light">
             <ul class="nav justify-content-center pb-3 mb-3">
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{footerHome}">Home</a>
+                    <a th:href="@{/}" class="nav-link px-2 text-dark fs-5" th:text="#{footerHome}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{features}">Features</a>
+                    <a th:href="@{/features}" class="nav-link px-2 text-dark fs-5" th:text="#{features}">Features</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{pricing}">Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{faqs}">FAQs</a>
+                    <a th:href="@{/FAQs}" class="nav-link px-2 text-dark fs-5" th:text="#{faqs}">FAQs</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{about}">About</a>
