working remember-me option added

--- a/TestingEz/src/main/resources/templates/faqs.html
+++ b/TestingEz/src/main/resources/templates/faqs.html
@@ -8,7 +8,7 @@
         <div class="accordion shadow rounded border border-2" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5 bg-light" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                         What is "TestingEz"?
                     </button>
@@ -27,7 +27,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5 bg-light" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         How did "TestingEz" come to existence?
                     </button>
@@ -47,7 +47,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5 bg-light" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false"
                             aria-controls="collapseThree">
                         Who stands behind "TestingEz"?
@@ -66,7 +66,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5 bg-light" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseFour" aria-expanded="false"
                             aria-controls="collapseThree">
                         Should I pay before I use "TestingEz"?
@@ -84,7 +84,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fs-5 bg-light" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseFive" aria-expanded="false"
                             aria-controls="collapseThree">
                         Is "TestingEz" safe?
