--- a/TestingEz/src/main/resources/templates/features.html
+++ b/TestingEz/src/main/resources/templates/features.html
@@ -1,29 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:fragment="head">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>TestingEz</title>
-    <link
-            rel="icon"
-            type="image/x-icon"
-            href="/images/school.png"
-    />
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/typography.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-    />
-</head>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 <div class="d-flex flex-column">
     <span class="text-center fs-3">Discover wonderful "TestingEz" features</span>
     <div class="container d-flex flex-column justify-content-center my-3 gap-5 pb-2 overflow-auto"
          style="height: 1110px; padding-top: 1260px;">
-        <div class="row justify-content-center align-items-center shadow rounded border border-2">
+        <div class="row justify-content-center align-items-center bg-light shadow rounded border border-2">
             <div class="col-sm-12 col-md-6">
                 <img src="/images/user-home.png" alt="user-home" class="rounded img-fluid">
             </div>
@@ -33,7 +16,7 @@
                     interesting content every circle hour.</p>
             </div>
         </div>
-        <div class="row justify-content-center align-items-center shadow rounded border border-2">
+        <div class="row justify-content-center align-items-center bg-light shadow rounded border border-2">
             <div class="col-sm-12 col-md-4">
                 <h1>Here we go again...</h1>
                 <p>This might not be your favourite place...&#128513;</p>
@@ -42,7 +25,7 @@
                 <img src="/images/test-join.png" alt="test-join" class="rounded img-fluid">
             </div>
         </div>
-        <div class="row justify-content-center align-items-center shadow rounded border border-2">
+        <div class="row justify-content-center align-items-center bg-light shadow rounded border border-2">
             <div class="col-sm-12 col-md-6">
                 <img src="/images/test-create.png" alt="test-create" class="rounded img-fluid">
             </div>
@@ -51,7 +34,7 @@
                 <p>This is where the magic happens.</p>
             </div>
         </div>
-        <div class="row justify-content-center align-items-center shadow rounded border border-2">
+        <div class="row justify-content-center align-items-center bg-light shadow rounded border border-2">
             <div class="col-sm-12 col-md-4">
                 <h1>You missed something?</h1>
                 <p>Don't forget to include that one question...</p>
@@ -60,7 +43,7 @@
                 <img src="/images/test-details.png" alt="test-details" class="rounded img-fluid">
             </div>
         </div>
-        <div class="row justify-content-center align-items-center shadow rounded border border-2">
+        <div class="row justify-content-center align-items-center bg-light shadow rounded border border-2">
             <div class="col-sm-12 col-md-6">
                 <img src="/images/question-answer.png" alt="question-answer" class="rounded img-fluid">
             </div>
@@ -69,7 +52,7 @@
                 <p>You know the drill: drop the pencil, throw a glance, answer the question. Repeat.</p>
             </div>
         </div>
-        <div class="row justify-content-center align-items-center shadow rounded border border-2">
+        <div class="row justify-content-center align-items-center bg-light shadow rounded border border-2">
             <div class="col-sm-12 col-md-4">
                 <h1>Great job!</h1>
                 <p>You did it, mate! You can peacefully ask for your PS5 now!</p>
@@ -78,7 +61,7 @@
                 <img src="/images/result-summary.png" alt="result-summary" class="rounded img-fluid">
             </div>
         </div>
-        <div class="row justify-content-center align-items-center shadow rounded border border-2">
+        <div class="row justify-content-center align-items-center bg-light shadow rounded border border-2">
             <div class="col-sm-12 col-md-4">
                 <h1>Hmmm...wait a minute.</h1>
                 <p>How could I even answer wrong here???</p>
@@ -88,41 +71,8 @@
             </div>
         </div>
     </div>
-    <footer th:fragment="footer" class="border-top border-2 bg-light">
-        <div class="container-fluid bg-light">
-            <footer class="container bg-light">
-                <ul class="nav justify-content-center pb-3 mb-3">
-                    <li class="nav-item">
-                        <a th:href="@{/}" class="nav-link px-2 text-dark fs-5" th:text="#{footerHome}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a th:href="@{/features}" class="nav-link px-2 text-dark fs-5"
-                           th:text="#{features}">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{pricing}">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a th:href="@{/FAQs}" class="nav-link px-2 text-dark fs-5" th:text="#{faqs}">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{about}">About</a>
-                    </li>
-                </ul>
-                <p class="text-center text-dark fs-5">© 2024 Company, Inc</p>
-            </footer>
-        </div>
-    </footer>
+    <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
-<script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"
-></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
