--- a/TestingEz/src/main/resources/templates/sign-in.html
+++ b/TestingEz/src/main/resources/templates/sign-in.html
@@ -41,6 +41,12 @@
                         type="password"
                 />
             </div>
+            <div>
+                <input class="form-check-input" type="checkbox" id="remember-me" name="remember-me">
+                <label class="form-check-label fs-6" for="remember-me">
+                    Remember me
+                </label>
+            </div>
             <div
                     th:if="${#fields.hasErrors('password')}"
                     th:errors="*{password}"
