all-users.html created

--- a/TestingEz/src/main/resources/templates/account-delete.html
+++ b/TestingEz/src/main/resources/templates/account-delete.html
@@ -34,5 +34,6 @@
     </div>
 </div>
 <script src="/js/confirm-deletion.js"></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
