--- a/TestingEz/src/main/resources/templates/avatar-change.html
+++ b/TestingEz/src/main/resources/templates/avatar-change.html
@@ -36,5 +36,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 <script src="/js/change-avatar.js"></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
