--- a/TestingEz/src/main/resources/templates/all-users.html
+++ b/TestingEz/src/main/resources/templates/all-users.html
@@ -5,8 +5,7 @@
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-3">
     <div th:replace="~{fragments/headers :: header}"></div>
-
-    <h3 class="text-center">All Users</h3>
+    <h3 class="text-center" th:text="#{allUsers}"></h3>
     <main class="container d-flex flex-column justify-content-center flex-grow-1">
         <div class="bg-light shadow rounded border border-2 p-5">
             <div class="d-flex justify-content-center gap-2 flex-wrap mb-3">
@@ -18,7 +17,7 @@
                          width="100"
                          class="rounded-circle border border-2 shadow">
                     <span class="fs-5" th:text="'@'+${profile.username}"></span>
-                    <button class="btn btn-dark border border-2 rounded fs-5 px-5">view</button>
+                    <button class="btn btn-dark border border-2 rounded fs-5 px-5" th:type="#{view}"></button>
                 </div>
             </div>
             <div class="d-flex justify-content-center gap-1">
