--- a/TestingEz/src/main/resources/templates/my-tests.html
+++ b/TestingEz/src/main/resources/templates/my-tests.html
@@ -25,7 +25,7 @@
                     <span th:text="#{lastUpdated} + ' ' + ${test.dateUpdated}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3 text-end">
-                    <a class="btn btn-dark px-3 border border-2 rounded"
+                    <a class="btn btn-dark px-3 border border-2 border-black rounded"
                        th:text="#{details}"
                        th:href="@{/test/details/{id}(id=${test.id})}">
                     </a>
